--- a/Business/Water/ICMTransportables/libs/Transportable.css
+++ b/Business/Water/ICMTransportables/libs/Transportable.css
@@ -3,3 +3,33 @@
     background-repeat: no-repeat !important;
     background-position: center;
 }
+.jsFileTree-Wrapper {
+    height:300px;
+    max-height:300px;
+    overflow:scroll;
+    width:100%;
+    
+    
+}
+.jsFileTree-Table {
+    display:table;
+    table-layout:fixed;
+    width:100%;
+    height:100%;
+}
+.jsFileTree-Tree{
+    height:100%;
+    display:table-cell;
+    resize:none;
+}
+.jsFileTree-Content{
+    display:table-cell;
+    width:100%;
+    height:100%;
+    font-size: 10px;
+    resize:none;
+    border-color:rgb(240, 240, 240);
+}
+.jsFileTree-Content:focus {
+    outline: none !important;
+}
