--- a/Business/Water/ICMTransportables/libs/InnovyzeTransportable.css
+++ b/Business/Water/ICMTransportables/libs/InnovyzeTransportable.css
@@ -30,7 +30,7 @@
     resize:none;
 }
 .jsFileTree-Content{
-    display:table-cell;
+    /*display:table-cell;   -Must not use this in IE. Don't need it for chrome etc. */
     width:100%;
     height:100%;
     font-size: 10px;
